--- a/climacoder/writing.html
+++ b/climacoder/writing.html
@@ -422,7 +422,7 @@
     </header>
 
     <main>
-        <h2>Writing: Heat Stress Across Latin America</h2>
+        <h2>Heat Stress Across Latin America</h2>
 
         <div class="intro">
             <p>
@@ -433,9 +433,7 @@
                 poverty levels limit adaptation options.
             </p>
             <p>
-                Below are country-specific analyses examining heat vulnerability, health impacts,
-                and the populations most at risk. Each summary synthesizes available data on heat
-                hazards and identifies critical knowledge gaps.
+                This page showcases preliminary analyses from our ongoing systematic review of heat stress research and interventions across Latin America. Below are country-specific analyses examining heat vulnerability, health impacts, and the populations most at risk. Each summary synthesizes available data on heat hazards and identifies critical knowledge gaps.
             </p>
         </div>
 
@@ -604,70 +602,6 @@
                 air conditioning or access to reliable water sources.
             </p>
         </section>
-
-        <div class="instructions">
-            <h3>How to Publish Your Writing and Graphs</h3>
-            <p>
-                You can extend this page by adding new sections for additional topics or by
-                updating existing text. To document your findings graphically, upload
-                figures into the <code>assets/graphs</code> folder with descriptive file
-                names (for example <code>2025-08-15-heat-index-map.png</code>). Then insert
-                the graph in the relevant section using an <code>&lt;img&gt;</code> tag, e.g.:
-            </p>
-            <pre><code>&lt;img src="assets/graphs/2025-08-15-heat-index-map.png" alt="Heat index map for 15 Aug 2025" /&gt;</code></pre>
-            <p>
-                Commit the new file and updated HTML to your repository. Once pushed to
-                GitHub, your graph will automatically appear on the published website. This
-                simple workflow—upload the image, reference it in HTML and push your
-                changes—ensures your work is time-stamped and attributable to you.
-            </p>
-        </div>
-
-        <div class="references-section">
-            <h3>References</h3>
-            <ol class="references">
-                <li id="ref1">
-                    Extreme heat can cause dehydration, heat cramps, heat stroke, mental
-                    illnesses, renal and cardio-pulmonary diseases, and premature death.
-                </li>
-                <li id="ref2">
-                    Central and South America face high vulnerability to heat because of rapid
-                    urbanisation, lack of potable water and sanitation, poor infrastructure and
-                    high poverty.
-                </li>
-                <li id="ref3">
-                    Guatemala and El Salvador are identified as having the highest heat risk
-                    in Central America.
-                </li>
-                <li id="ref4">
-                    Evidence linking heat stress to health care demands, vector-borne disease
-                    proliferation, reduced agricultural productivity and migration remains
-                    limited, highlighting the need for more research.
-                </li>
-                <li id="ref5">
-                    The ThinkHazard database classifies Belize, Guatemala and Honduras as
-                    experiencing a high extreme heat hazard.
-                </li>
-                <li id="ref6">
-                    Extreme heat affects multiple sectors and disproportionately impacts
-                    urban residents and outdoor workers.
-                </li>
-                <li id="ref7">
-                    Drought and heat waves in 2023–2024 led to dramatic increases in dengue
-                    cases in Guatemala (622%) and Honduras (580%) and caused forest fires in
-                    Belize.
-                </li>
-                <li id="ref8">
-                    Children, people with disabilities, pregnant women, older adults and
-                    outdoor workers are among the groups most vulnerable to heat stress.
-                </li>
-                <li id="ref9">
-                    Mexico's multiyear drought since winter 2022–2023 caused widespread water
-                    scarcity and amplified heat waves, with 76% of the country in drought by
-                    May 2024.
-                </li>
-            </ol>
-        </div>
     </main>
 
     <footer>
