--- a/research/heatindex.html
+++ b/research/heatindex.html
@@ -299,7 +299,7 @@
     </header>
 
     <div class="container">
-        <h1>🌡️ Interactive Heat Index Calculator</h1>
+        <h1>Interactive Heat Index Calculator</h1>
         
         <div class="info-box">
             <p><strong>Explore different heat stress scenarios</strong> by adjusting the parameters below. 
@@ -348,6 +348,21 @@
         </div>
 
         <div id="zonePlot" style="margin-top: 30px;"></div>
+
+        <div class="info-box" style="margin-top: 2rem; background: #e3f2fd; border-left: 4px solid #2196f3;">
+            <h3>India Heat Alerts API</h3>
+            <p>
+                Real-time heat stress data and alerts for India are available through our open-source Heat Alerts API.
+                Access historical weather data, heat index calculations, and automated alerts at:
+            </p>
+            <p style="margin-top: 1rem;">
+                <a href="https://ekilic-coder.github.io/Heat-Alerts-EHI/weather_logs/index.html"
+                   target="_blank"
+                   style="color: #0066cc; font-weight: 600; text-decoration: none; border-bottom: 2px solid #0066cc;">
+                    India Heat Alerts Dashboard →
+                </a>
+            </p>
+        </div>
     </div>
 
     <footer>
