--- a/research.html
+++ b/research.html
@@ -254,6 +254,52 @@
             border-top: 1px solid #e0e0e0;
             color: #666;
         }
+
+        .footer-links {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 1rem;
+            margin-bottom: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .footer-links a {
+            color: #0066cc;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        .footer-links a:hover {
+            color: #0052a3;
+            text-decoration: underline;
+        }
+
+        .footer-links .linkedin-icon {
+            display: inline-flex;
+            align-items: center;
+            transition: opacity 0.3s;
+        }
+
+        .footer-links .linkedin-icon:hover {
+            opacity: 0.8;
+            text-decoration: none;
+        }
+
+        .footer-links .linkedin-icon img {
+            width: 24px;
+            height: 24px;
+        }
+
+        .footer-separator {
+            color: #999;
+            margin: 0 0.5rem;
+        }
+
+        .copyright {
+            color: #999;
+            font-size: 0.9rem;
+        }
     </style>
 </head>
 <body>
@@ -285,9 +331,9 @@
             <div class="dropdown">
                 <a href="/climacoder.html">ClimaCoder</a>
                 <div class="dropdown-content">
-                    <a href="/climacoder.html#team">Team</a>
+                    <a href="/climacoder/team.html">Team</a>
                     <div class="dropdown-submenu">
-                        <a href="#">Research ▸</a>
+                        <a href="#">Research</a>
                         <div class="dropdown-submenu-content">
                             <a href="/climacoder/countries/belize.html">Belize</a>
                             <a href="/climacoder/countries/guatemala.html">Guatemala</a>
@@ -299,9 +345,24 @@
                             <a href="/climacoder/countries/mexico.html">Mexico</a>
                         </div>
                     </div>
-                    <a href="/climacoder/writing.html">Writing</a>
+                    <div class="dropdown-submenu">
+                        <a href="#">Writing</a>
+                        <div class="dropdown-submenu-content">
+                            <a href="/climacoder/writing.html#belize">Belize</a>
+                            <a href="/climacoder/writing.html#guatemala">Guatemala</a>
+                            <a href="/climacoder/writing.html#honduras">Honduras</a>
+                            <a href="/climacoder/writing.html#el-salvador">El Salvador</a>
+                            <a href="/climacoder/writing.html#nicaragua">Nicaragua</a>
+                            <a href="/climacoder/writing.html#costa-rica">Costa Rica</a>
+                            <a href="/climacoder/writing.html#panama">Panama</a>
+                            <a href="/climacoder/writing.html#mexico">Mexico</a>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            <!-- Tender Resilience -->
+            <a href="/tender-resilience.html">Tender Resilience</a>
         </nav>
     </header>
 
@@ -340,45 +401,12 @@
                 <h3>Future Heat Stress Projections</h3>
                 <p class="project-org">India Energy & Climate Center (IECC), UC Berkeley</p>
                 <p>
-                    Developing machine learning models to project future heat stress scenarios under climate
-                    change. This ongoing work combines climate model outputs with the Extended Heat Index
-                    framework to forecast when and where extreme heat will exceed human physiological limits.
-                    The goal is to provide actionable, location-specific projections that can inform long-term
-                    adaptation planning and policy decisions.
-                </p>
-
-                <h4 style="margin-top: 2rem; margin-bottom: 1rem; color: #0066cc;">Research Overview</h4>
-                <p>
-                    Climate models project substantial increases in temperature and humidity extremes throughout
-                    the 21st century. However, these projections are rarely translated into physiologically-relevant
-                    metrics that decision-makers can use. This project bridges that gap by combining CMIP6 climate
-                    model outputs with the Extended Heat Index to create location-specific forecasts of when outdoor
-                    work and normal activities will become physiologically dangerous or impossible.
-                </p>
-
-                <h4 style="margin-top: 2rem; margin-bottom: 1rem; color: #0066cc;">Methodology</h4>
-                <p>
-                    We're using stacked generalization and ensemble machine learning approaches to:
-                </p>
-                <ul style="margin-left: 2rem; margin-top: 1rem; line-height: 1.8;">
-                    <li>Process multi-model CMIP6 climate projections (SSP2-4.5, SSP5-8.5 scenarios)</li>
-                    <li>Apply the Extended Heat Index framework to projected temperature and humidity</li>
-                    <li>Generate probabilistic forecasts of heat stress exceedance for different activity levels</li>
-                    <li>Identify when specific locations will cross critical physiological thresholds</li>
-                </ul>
-
-                <h4 style="margin-top: 2rem; margin-bottom: 1rem; color: #0066cc;">Applications</h4>
-                <p>
-                    This work supports long-term adaptation planning by providing answers to critical questions:
-                    When will outdoor work become unsafe during specific months? Which regions will cross
-                    physiological limits first? How much time do communities have to adapt before heat stress
-                    becomes unmanageable?
+                    I'm developing machine learning approaches to project future heat stress scenarios under climate change, using outputs from global climate models. This work is in early development.
                 </p>
 
                 <div style="background: #fff3e0; padding: 1.5rem; border-radius: 8px; margin-top: 2rem; border-left: 4px solid #f57c00;">
                     <p style="margin: 0; font-weight: 600; color: #e65100;">
-                        <strong>Status:</strong> This research is currently in early development. Initial results
-                        expected in 2025. Patent application filed (see Publications page).
+                        <strong>Status:</strong> Early development. Initial results expected in 2025.
                     </p>
                 </div>
             </article>
@@ -386,7 +414,16 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="year"></span> ELİF KILIÇ. All rights reserved.</p>
+        <div class="footer-links">
+            <a href="mailto:elifkilic@berkeley.edu">elifkilic@berkeley.edu</a>
+            <span class="footer-separator">|</span>
+            <a href="mailto:climacoder@gmail.com">climacoder@gmail.com</a>
+            <span class="footer-separator">|</span>
+            <a href="https://www.linkedin.com/in/elifakilic/" target="_blank" class="linkedin-icon" aria-label="LinkedIn Profile">
+                <img src="/assets/images/linkedin-icon.svg" alt="LinkedIn" />
+            </a>
+        </div>
+        <p class="copyright">&copy; <span id="year"></span> ELİF KILIÇ. All rights reserved.</p>
     </footer>
 
     <script>
